--- a/pills_visualization/public/css/graph.css
+++ b/pills_visualization/public/css/graph.css
@@ -1,3 +1,49 @@
+/* Style for filter-container */
+/* Style for filter-container */
+.filter-container {
+    padding: 8px 40px;
+    background-color: #f7f7f7;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 8px;
+    display: flex;
+    gap: 16px; /* space between elements */
+    justify-content: flex-end; /* Align content to the right */
+    align-items: center; /* Align items vertically in the center */
+}
+
+.filter-container label {
+    font-weight: bold;
+    color: #333;
+    width: 100px; /* Fixed width for labels */
+}
+
+.filter-container input[type="date"] {
+    padding: 8px;
+    width: 200px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+/* Button Style */
+.filter-container button {
+    padding: 10px 20px;
+    background-color: #007bff; /* Blue color */
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+/* Button hover effect */
+.filter-container button:hover {
+    background-color: #0056b3;
+}
+
+
+/* filter end */
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +53,7 @@
 
 
 .container {
-    margin-top: 15px;
+    margin-top:8px;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
