--- a/pills_visualization/public/css/graph.css
+++ b/pills_visualization/public/css/graph.css
@@ -223,10 +223,10 @@
     width: calc(100% - 5px);
     box-sizing: border-box;
     padding: 15px;
-    /* border-radius: 8px; */
+    border-radius: 8px;
     background-color: #50a0f0;
     box-shadow: 0 8px 12px rgba(2, 2, 2, 0.1);
-    margin-bottom: -15px;
+    margin-bottom: -10px;
 
 
 }
