--- a/pills_visualization/public/css/graph.css
+++ b/pills_visualization/public/css/graph.css
@@ -224,7 +224,7 @@
     box-sizing: border-box;
     padding: 15px;
     border-radius: 8px;
-    background-color: #50a0f0;
+    background-color: #6db0f2;
     box-shadow: 0 8px 12px rgba(2, 2, 2, 0.1);
     margin-bottom: -10px;
 
